flapivor/tests/m1/hopix/parser/good/52-instanciation-6.hopix
val x = map <Int, Int -> Int>