flapivor/tests/m1/hopix/parser/bad/53-instanciation-7.hopix
val x = map <List<Int>, Pair<Int, Pair<Int, Int>>